<package>
  <name>orne_tools_rviz_plugins</name>
  <version>0.0.1</version>
  <description>
      The orne_tools_rviz_plugins
  </description>
  <maintainer email="humio@todo.todo">humio</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rviz</build_depend>
  <build_depend>std_srvs</build_depend>
  <run_depend>rviz</run_depend>
  <run_depend>std_srvs</run_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
